# NoContext

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  renovate.json  secrets_example.toml
.github/workflows/: docker-publish.yml
podman/: nocontext.service  nocontext.yaml
src/: avatar.rs  main.rs
