[package]
name = "discord"
version = "0.1.0"
authors = ["administrator"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.5.0", features = ["macros", "rt-multi-thread"]}
serenity = {version = "0.10.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "http", "cache"]}
chrono = "0.4.19"
chrono-tz = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"