[package]
name = "nocontext"
version = "0.0.3"
authors = ["cubis", "ESoro25"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.14.0", features = ["macros", "rt-multi-thread"]}
serenity = {version = "0.10.9", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "http", "cache"]}
chrono = "0.4.19"
chrono-tz = "0.10.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.72"
toml = "0.5.8"
sled = "0.34.7"
reqwest = "0.11.7"
bottomify = "1.2.0"